<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Widget.StudyWords.Light"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authentication.CreateAccountFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainLayout"
        style="@style/Widget.StudyWords.Light"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">


        <TextView
            android:id="@+id/errorMessage"
            style="@style/Widget.StudyWords.Light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:textColor="@color/error_color"
            android:textSize="16sp"

            app:layout_constraintBottom_toTopOf="@id/screenCaption"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="Got some error" />

        <TextView
            android:id="@+id/screenCaption"
            style="@style/Widget.StudyWords.Light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/account_creation_caption"
            android:textAlignment="center"
            android:textSize="24sp"

            app:layout_constraintBottom_toTopOf="@id/loginCaption"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/errorMessage" />

        <TextView
            android:id="@+id/loginCaption"
            style="@style/Widget.StudyWords.Light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="20dp"

            android:text="@string/login_caption"
            android:textSize="20sp"

            app:layout_constraintBottom_toTopOf="@id/userNameLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/screenCaption" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userNameLayout"
            style="@style/Widget.StudyWords.Credentials"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="10dp"

            android:hint="@string/email"
            app:endIconMode="clear_text"
            app:layout_constraintBottom_toTopOf="@id/passwordCaption"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginCaption">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userName"
                style="@style/Widget.StudyWords.Credentials"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="login" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/passwordCaption"
            style="@style/Widget.StudyWords.Light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="20dp"

            android:text="@string/password_caption"
            android:textSize="20sp"

            app:layout_constraintBottom_toTopOf="@id/passwordLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userNameLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayout"
            style="@style/Widget.StudyWords.Credentials"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            app:endIconMode="clear_text"

            app:layout_constraintBottom_toTopOf="@id/createButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordCaption">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                style="@style/Widget.StudyWords.Credentials"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                tools:text="password" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/createButton"
            style="@style/Widget.StudyWords.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="Create"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordLayout" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/confirmationLayout"
        style="@style/Widget.StudyWords.Dark"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent_layout"
        android:visibility="gone">

        <TextView
            android:id="@+id/confirmTitleMessage"
            style="@style/Widget.StudyWords.Dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/confirmation_title"
            android:textAlignment="center"

            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/confirmErrorMessage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/confirmErrorMessage"
            style="@style/Widget.StudyWords.Dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="20dp"

            android:textAlignment="center"
            android:textColor="@color/error_color_on_dark"
            android:textSize="20sp"

            app:layout_constraintBottom_toTopOf="@id/confirmCodeLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/confirmTitleMessage"
            tools:text="Got some error" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmCodeLayout"
            style="@style/Widget.StudyWords.Credentials"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="20dp"
            android:hint="@string/confirm_hint"
            app:endIconMode="clear_text"
            app:layout_constraintBottom_toTopOf="@id/confirmButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/confirmErrorMessage">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirmCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="123456" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/confirmButton"
            style="@style/Widget.StudyWords.Button.Light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/confirm_ok"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/confirmCodeLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <ProgressBar
        android:id="@+id/progress_bar"
        style="@style/Widget.StudyWords.Light"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_margin="0dp"
        android:layout_marginTop="150dp"
        android:background="@color/transparent"
        android:visibility="visible" />

</FrameLayout>