<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Widget.StudyWords.Light"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.words.WordsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/upBar"
        style="@style/Widget.StudyWords.TopAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.StudyWords.TopAppBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:menu="@menu/word_list_menu"
            app:navigationContentDescription="@string/descr_back_button"
            app:navigationIcon="@drawable/ic_back" />

    </com.google.android.material.appbar.AppBarLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/searchEditTextLayout"
        style="@style/Widget.StudyWords.SearchWidget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingBottom="6dp"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toTopOf="@id/wordsRecyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/upBar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/searchEditText"
            style="@style/Widget.StudyWords.SearchWidget.Input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_title"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLength="100"
            android:maxLines="1"
            android:paddingVertical="10dp"
            android:paddingStart="40dp"

            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/wordsRecyclerView"
        style="@style/Widget.StudyWords.Light"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/studyButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchEditTextLayout"
        tools:itemCount="5"
        tools:listitem="@layout/words_item" />

    <Button
        android:id="@+id/studyButton"
        style="@style/Widget.StudyWords.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/study"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>